testdata/baselines/reference/submodule/compiler/unusedTypeParameters4.errors.txt
unusedTypeParameters4.ts(2,13): error TS6196: 'U' is declared but never used.


==== unusedTypeParameters4.ts (1 errors) ====
    var x: {
        new <T, U>(a: T): void;
                ~
!!! error TS6196: 'U' is declared but never used.
    }